--- a/skystyles.css
+++ b/skystyles.css
@@ -41,13 +41,14 @@
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
-@media only screen and (max-width: 600px) {
-  video {
-    display:none;
-  }
-  body{
-    background-image:url("BGmob.jpg");
-  }
+@media (max-width: 767px) {
+    .fullscreen-bg {
+        background: url('BGmob.jpg') center center / cover no-repeat;
+    }
+
+    .fullscreen-bg__video {
+        display: none;
+    }
 }
 
 .footer {
